# oil-simulator

./: CMakeLists.txt  README.md  README.ru.md  results.txt
docs/: plan.md
python/: main.py  visualize.py
src/: FluidProperties.cpp  FluidProperties.h  Grid.cpp  Grid.h  Parameters.cpp  Parameters.h  Scenario.cpp  Scenario.h  Solver.cpp  Solver.h  Well.cpp  Well.h  main.cpp
tests/: TestSaturationUpdate.cpp  TestWellFlow.cpp  test_placeholder.cpp
